--- a/app/views/current_bps/landing_page.html.erb
+++ b/app/views/current_bps/landing_page.html.erb
@@ -56,6 +56,29 @@
 			<h4>What about smoking?</h4>
 				<p>You may be amazed to find that there is no direct link between smoking and high blood pressure. However smoking does make you more at risk of heart attacks and strokes.</p>
 				<p>The single best thing that you can do to make you live longer is to stop smoking. You will find links to helpful sites on our links page.</p>
+				
+			<h3>Complementary Medicine</h3>
+				<p>You may wish to try supplements to control your blood pressure. Unfortunately calcium and magnesium supplements have not been shown to have a clinically significant effect on your blood pressure. And contrary to popular belief, potassium supplements have no effect on your blood pressure at all.</p>
+			
+			<h4>Acupuncture</h4>
+				<p>Although you may wish to try acupuncture to see if it helps with your blood pressure, at the moment we do not know whether it is helpful.</p>
+				
+			<h3>Which medication should I take?</h3>
+				<p>You may find all the different medications and tablet names to treat high blood pressure confusing. You are not alone, in fact many doctors find it confusing as well.</p>
+				<p>One of the problems is that the same medication can have many different names depending on which brand it is that you use. The pills of different brands of the same medication can be different shapes, and even different colours.</p>
+				<p>In many cases, the medication will have more than one name on it. Usually the brand name is in big writing, and the name of the active ingredient is in much smaller writing.</p>
+				<p>To give you an example that you’ve likely come across before, “Nurofen” is a brand of ibuprofen. This is a common pain-killer that is sold over  the counter in the UK. “Nurofen” is the brand name of the drug. “Ibuprofen” is the generic name of the drug. When doctors prescribe, they can choose whether to prescribe using a brand name, or to prescribe using the generic name.</p>
+				<p>In the UK you will find doctors often write NHS prescriptions using generic names. This is because the generic tablets tend to be cheaper than the branded versions. This is just the same as own-brand supermarket goods being cheaper than the well known brand names.</p>
+				<p>You may find that one brand of medication works better  than another, even though you’ve been told that they’re the same thing. This is because of the placebo effect.</p>
+				
+			<h4>Combination tablets</h4>
+				<p>You may also have been prescribed combination tablets in the past. These are tablets that contain more than one active ingredient. You can tell if you’re taking a combination tablet as their name starts with Co-. The advantage of a combination tablet is that it means that you have to take less tablets each day. The disadvantage is that often they are much more expensive than taking each medication separately.</p>
+				<p>To simplify things for you, in  the lists of medication below we have used bold typeface for the generic names, and then listed all the brand names in normal typeface in brackets afterwards.</p>
+				<p>When you purchase a prescription from us, you will be able to choose whether you want a prescription for a branded medication or a generic one, although you will end up paying more for the brand names, just as you would do in the supermarket.</p>
+				<p>Drugs are put in groups according to the way that they work on your body. This means that two different drugs with different names can be in the same group. Usually different drugs in the same group should not be taken together.</p>
+				<p>It is likely that you will find that if you do need medication, like most people, you will end up using more than one drug in combination. This is because often, different drugs have what is called a synergistic effect when used in combination. Synergy is when the good effects of two or more drugs used at the same time is greater than the effects of those drugs when they are used individually.</p>
+				<p>Because of this you will hear drugs referred to as first line and second line choices. These first and second line choices vary according to your age. They also vary according to your ethnicity. This is because some studies have shown that some medications do not work as well in people with an African or Caribbean background.</p>
+				
 		</div>
 	</div>
 </div>
