--- a/app/views/current_bps/landing_page.html.erb
+++ b/app/views/current_bps/landing_page.html.erb
@@ -36,16 +36,18 @@
 				
 			<h4>What can I do about my diet?</h4>
 				<p>If you have high blood pressure, then there are two simple things that you can change that will help lower it. They are to lose some weight, and reduce the amount of salt in your diet.</p>
-				<p>If you’re overweight, losing even a bit of weight can help your blood pressure. There’s lots of exciting research going on at the moment to find the best way for you to do this. </p>
+				<p>If you’re overweight, losing even a bit of weight can help your blood pressure. There’s lots of exciting research going on at the moment to find the best way for you to do this.</p>
+				<%= image_tag("woman_apple_small.jpg", :class => "picture_left") %>
 				<p>However the current most successful advice remains to eat a high fibre and low fat diet. You should also try to reduce the size of your portions. Cutting down on red meat and eating more green leafy vegetables will also help with your health.</p>
 				<p>The second is to control the amount of salt that you get in your diet. You may find this difficult, especially if you don’t get the chance to cook from scratch. This is because processed foods tend to have a lot of hidden salt in them. So do foods such as cereals, cheese and bread. Reducing the amount of salt in your diet can help to reduce your blood pressure.</p>
-				<p>Unfortunately it is unlikely that using salt substitutes are affective in controlling blood pressure.</p>
+				<p>Unfortunately it is unlikely that salt substitutes are effective in controlling blood pressure.</p>
 			
 			<h4>What about the things that I drink?</h4>
 				<p>The best thing that you can do to help with your blood pressure is to cut down the amount of alcohol that you drink. This can also help you to lose weight which will also help with your blood pressure.</p>
 				<p>Another drink that can affect your blood pressure is coffee. However as long as you drink it in moderation it is unlikely to be harmful. “In moderation” means less than 5 cups a day.</p>
 				
 			<h4>What exercise do I need to do?</h4>
+				<%= image_tag("man_running_small.jpg", :class => "picture_right") %>
 				<p>In the past you may have found the advice about exercise very confusing. This is because we actually know very little about the effects of exercise on your blood pressure. There is not much good evidence that exercise helps your blood pressure.</p>
 				<p>This ignores all the other benefits of exercise on your physical and mental health.  Exercise helps with your coordination and strength. It can also be sociable and fun if you choose the right activity.</p>
 				<p>The current best advice about exercise and blood pressure is that if you exercise for 50 to 60 minutes,  3 or 4 times a week, it probably helps to lower your blood pressure.</p>
@@ -65,6 +67,7 @@
 				
 			<h3>Which medication should I take?</h3>
 				<p>You may find all the different medications and tablet names to treat high blood pressure confusing. You are not alone, in fact many doctors find it confusing as well.</p>
+				<%= image_tag("tablets_small.jpg", size: "240x160", :class => "picture_right") %>
 				<p>One of the problems is that the same medication can have many different names depending on which brand it is that you use. The pills of different brands of the same medication can be different shapes, and even different colours.</p>
 				<p>In many cases, the medication will have more than one name on it. Usually the brand name is in big writing, and the name of the active ingredient is in much smaller writing.</p>
 				<p>To give you an example that you’ve likely come across before, “Nurofen” is a brand of ibuprofen. This is a common pain-killer that is sold over  the counter in the UK. “Nurofen” is the brand name of the drug. “Ibuprofen” is the generic name of the drug. When doctors prescribe, they can choose whether to prescribe using a brand name, or to prescribe using the generic name.</p>
