--- a/app/views/current_bps/landing_page.html.erb
+++ b/app/views/current_bps/landing_page.html.erb
@@ -10,14 +10,7 @@
 			<h5>Are you worried about side effects from blood pressure medication?</h5>
 		</div>
 		
-		<div id='landing_page_content_1'>
-			<h3>If so, you've come to the right place...</h3>
-			
-			<p>To make things simple we’ve broken the advice down into three broad groups...</p>
-			<p>First comes information about the lifestyle changes that you can make in order to lower your blood pressure and lead a healthier life. Second is information about complementary healthcare treatments that you may have considered using, such as supplements or acupuncture.</p>
-			<p>And finally is information about the different medications that you might be prescribed by your doctor, or even better, that you may choose to have prescribed yourself, through our easy to use service.</p>
-		</div>
-		
+		<div id='landing_page_content'>
 		<div id='cta_bp_entry'>
 			<div id='title'>
 				Is my blood pressure too high?
@@ -28,8 +21,13 @@
 			</div>
 			<%= link_to "How do I measure my blood pressure?", how_to_measure_bp_current_bps_path, :class => 'how_to_measure_bp' %>
 		</div>
+			
+			<h2>If so, you've come to the right place...</h2>
+			
+			<p class='more_space'>To make things simple we’ve broken the advice down into three broad groups...</p>
+			<p class='more_space'>First comes information about the lifestyle changes that you can make in order to lower your blood pressure and lead a healthier life. Second is information about complementary healthcare treatments that you may have considered using, such as supplements or acupuncture.</p>
+			<p class='more_space'>And finally is information about the different medications that you might be prescribed by your doctor, or even better, that you may choose to have prescribed yourself, through our easy to use service.</p>
 		
-		<div id='landing_page_content_2'>
 			<h3>Lifestyle</h3>
 				<p>Are you one of the many people who’ve been told at some point that you need to change your lifestyle for the better? Have you found the advice confusing and contradictory?</p>
 				<p>If so then let us take you through the various changes that you can make in your life to lower your blood pressure...</p>
