--- a/app/assets/stylesheets/current_bps.css.scss
+++ b/app/assets/stylesheets/current_bps.css.scss
@@ -298,11 +298,10 @@ h1 {
       }
     }
     
-    #landing_page_content_1 {
+    #landing_page_content {
       float: left;
-      width: 600px;
       
-      h3 {
+      h2 {
         margin: 30px 0px 35px 120px;
         font-size: 16pt;
         color: #0844a4;
@@ -310,14 +309,52 @@ h1 {
       }
       
       p {
-        margin: 0px 40px 30px 50px;
+        margin: 0px 40px 25px 50px;
+      }
+      
+      p.more_space {
+        margin-bottom: 30px;
+      }
+    
+      h3 {
+        margin: 40px 0px 15px 0px;
+        font-size: 14pt;
+        color: #0844a4;
+        font-weight: bold;
+      }
+      
+      h4 {
+        margin: 0px 0px 5px 20px;
+        font-size: 12pt;
+        color: #0844a4;
+        font-weight: normal;
+      }
+     
+      .picture_left {
+        float: left;
+        margin: 0px 20px 0px 50px;
+      }
+      
+      .picture_right {
+        float: right;
+        margin: 0px 40px 0px 20px;
+      }
+      
+      .picture_left, .picture_right {
+        padding: 3px;
+        border-style:solid;
+        border-width:1px;
+        border-color:#033076;
       }
     }
+  }
+  
+  #landing_page_bp_treatment, #how_to_measure_bp {
     
     #cta_bp_entry {
-      float: left;
+      float: right;
       width: 300px;
-      margin: 0px 0px 10px 0px;
+      margin: 0px 40px 10px 40px;
       border-style:solid;
       border-width:2px;
       border-color:#033076;
@@ -356,46 +393,6 @@ h1 {
         display:block;
         text-align: center;
         margin-bottom: 20px;
-      }
-    }
-    
-    #landing_page_content_2 {
-      float: left;
-      width: 900px;
-      
-      h3 {
-        margin: 40px 0px 15px 0px;
-        font-size: 14pt;
-        color: #0844a4;
-        font-weight: bold;
-      }
-      
-      h4 {
-        margin: 0px 0px 5px 20px;
-        font-size: 12pt;
-        color: #0844a4;
-        font-weight: normal;
-      }
-      
-      p {
-        margin: 0px 40px 15px 50px;
-      }
-      
-      .picture_left {
-        float: left;
-        margin: 0px 10px 0px 50px;
-      }
-      
-      .picture_right {
-        float: right;
-        margin: 0px 40px 0px 10px;
-      }
-      
-      .picture_left, .picture_right {
-        padding: 3px;
-        border-style:solid;
-        border-width:1px;
-        border-color:#033076;
       }
     }
   }
