--- a/app/assets/stylesheets/current_bps.css.scss
+++ b/app/assets/stylesheets/current_bps.css.scss
@@ -236,7 +236,7 @@ h1 {
     color: #000000;
   }
     
-  #how_to_monitor_bp, #choosing_a_monitor, #how_to_measure_bp, #when_to_measure_bp {
+  #choosing_a_monitor, #how_to_measure_bp {
     
     h3 {
       font-size: 16pt;
