--- a/app/views/current_bps/landing_page.html.erb
+++ b/app/views/current_bps/landing_page.html.erb
@@ -1,4 +1,4 @@
-<div id='main_full_width'>
+<div id='main'>
 	<div id='landing_page_bp_treatment'>
 		<div id='heart_bp_monitor_pic'>
 			<%= image_tag("heart_bp_monitor_small.jpg", size: '150x120') %>
