--- a/app/views/current_bps/new.html.erb
+++ b/app/views/current_bps/new.html.erb
@@ -2,7 +2,7 @@
 	<h1>Is my blood pressure too high?</h1>
 	<p>Provide us with some blood pressure readings and we'll answer that question right away!</p><br />
 	<p>Whilst seated and relaxed, please take a blood pressure reading for us now and enter it in the boxes below:</p>
-	<div id='input_bp'>	
+	<div id='wizard_input_bp'>	
 		<%= render 'form' %>
 	</div>
 </div>
