08/10/13 finished css tidy

--- a/app/views/current_bps/choosing_a_monitor.html.erb
+++ b/app/views/current_bps/choosing_a_monitor.html.erb
@@ -1,16 +1,16 @@
-<div id='main_full_width'>
+<div id='main'>
 	<div id='choosing_a_monitor'>
 	<h1>Choosing a blood pressure monitor</h1>
 	
 	<p>It is important to ensure that your blood pressure monitor is accurate and the right monitor for you.</p>
 	
-	<h3>Use an arm blood pressure monitor</h3>
+	<h4>Use an arm blood pressure monitor</h4>
 		<p>Blood pressure monitors that wrap a cuff around your upper arm are generally more accurate than wrist or finger monitors.</p>
 	
-	<h3>Use a clinically validated monitor</h3>
+	<h4>Use a clinically validated monitor</h4>
 		<p>Make sure that the home blood pressure monitor you choose has been listed as 'clinically validated' for accuracy by the British Hypertension Society. This means that the monitor has gone through a series of tests to make sure it gives results that you can trust. Visit the <a href='http://www.bhsoc.org//index.php?cID=246' target='_blank'>British Hypertension Society's website</a> for a list of validated monitors.</p>
 
-	<h3>Use the right cuff size</h3>
+	<h4>Use the right cuff size</h4>
 		<p>An upper-arm blood pressure monitor will come with a cuff that you need to wrap around your arm. If you use a cuff that is the wrong size for you, your blood pressure reading will not be correct. Measure around your upper arm at the midpoint between your shoulder and elbow, and choose your cuff size from the table below.</p>
 		<div id='cufftable'>
 			<table>
@@ -38,10 +38,10 @@
 		</div>
 		<p>Most home blood pressure monitors will come with a medium-sized cuff. You may have to order a different-sized cuff separately.</p>
 
-	<h3>Choose a monitor to suit your budget</h3>
+	<h4>Choose a monitor to suit your budget</h4>
 		<p>All you need to accurately measure your blood pressure at home is a clinically validated monitor and pen and paper to record the results. Spending more money often brings more features such as a built-in memory, but these are not essential.</p>
 	
-	<h3>Keep your monitor calibrated</h3>
+	<h4>Keep your monitor calibrated</h4>
 		<p>Monitors generally need to be re-calibrated about once every 2 years to ensure they continue to give accurate results. This usually involves returning the monitor to the manufacturer, who may charge a fee for this service.</p>
 
 	</div>
