--- a/app/assets/stylesheets/current_bps.css.scss
+++ b/app/assets/stylesheets/current_bps.css.scss
@@ -66,8 +66,11 @@ h1 {
     h5 {
       margin: 0px 0px 5px 50px;
       font-size: 10pt;
-      color: #0844a4;
+      color: #ffffff;
       font-weight: bold;
+      padding: 5px 40px 5px 40px;
+      background-color: #033076;
+      display: inline;
     }
     
     #wizard_input_bp {
@@ -265,20 +268,27 @@ h1 {
       margin: 5px 0px 20px 0px;
       width: 600px;
       
-      h3, h4 ,h5 {
+      h3 {
         font-size: 16pt;
         color: #0844a4;
         font-weight: normal;
         margin: 10px 0px 0px 20px;
-        line-height: 28px;
       }
       
-      h4 {
+      #q1, #q2, #q3 {
+        height: 28px;
+      }
+        
+      #q2 {
+        margin-left:20px;
+      }
+      
+      #q3 {
         margin-left:40px;
       }
       
-      h5 {
-        margin-left:60px;
+      #q4 {
+        margin: -10px 0px 0px 60px;
       }
     }
     
@@ -310,14 +320,15 @@ h1 {
       }
       
       table {
-        margin: 10px 40px 25px 70px;
+        margin: 20px 40px 15px 120px;
         border: 1px solid #000000;
+        width: 600px;
         
         th {
           font-size: 10pt;
           color: #ffffff;
           font-weight: bold;
-          background-color: #033076;
+          background-color: #707070;
         }
         
         td {
