--- a/app/views/current_bps/landing_page.html.erb
+++ b/app/views/current_bps/landing_page.html.erb
@@ -5,9 +5,10 @@
 		</div>
 		
 		<div id='questions'>
-			<h3>Are you worried about your blood pressure?</h3>
-			<h4>Do you want to know the best way to treat it?</h4>
-			<h5>Are you worried about side effects from blood pressure medication?</h5>
+			<div id='q1'><h3>Are you worried about your blood pressure?</h3></div>
+			<div id='q2'><h3>Do you want to know the best way to treat it?</h3></div>
+			<div id='q3'><h3>Are you worried about side effects from blood pressure</h3></div>
+			<div id='q4'><h3>medication?</h3></div>
 		</div>
 		
 		<div id='landing_page_content'>
@@ -35,7 +36,7 @@
 			<h4>What can I do about my diet?</h4>
 				<p>If you have high blood pressure, then there are two simple things that you can change that will help lower it. They are to lose some weight, and reduce the amount of salt in your diet.</p>
 				<p>If you’re overweight, losing even a bit of weight can help your blood pressure. There’s lots of exciting research going on at the moment to find the best way for you to do this.</p>
-				<%= image_tag("woman_apple_small.jpg", :class => "picture_left") %>
+				<%= image_tag("woman_apple_small_2.jpg", :class => "picture_left") %>
 				<p>However the current most successful advice remains to eat a high fibre and low fat diet. You should also try to reduce the size of your portions. Cutting down on red meat and eating more green leafy vegetables will also help with your health.</p>
 				<p>The second is to control the amount of salt that you get in your diet. You may find this difficult, especially if you don’t get the chance to cook from scratch. This is because processed foods tend to have a lot of hidden salt in them. So do foods such as cereals, cheese and bread. Reducing the amount of salt in your diet can help to reduce your blood pressure.</p>
 				<p>Unfortunately it is unlikely that salt substitutes are effective in controlling blood pressure.</p>
@@ -43,15 +44,13 @@
 			<h4>What about the things that I drink?</h4>
 				<p>The best thing that you can do to help with your blood pressure is to cut down the amount of alcohol that you drink. This can also help you to lose weight which will also help with your blood pressure.</p>
 				<p>Another drink that can affect your blood pressure is coffee. However as long as you drink it in moderation it is unlikely to be harmful. “In moderation” means less than 5 cups a day.</p>
-				
+			
+			<%= image_tag("man_running_small_2.jpg", :class => "picture_right") %>	
 			<h4>What exercise do I need to do?</h4>
-				<%= image_tag("man_running_small.jpg", :class => "picture_right") %>
+				
 				<p>In the past you may have found the advice about exercise very confusing. This is because we actually know very little about the effects of exercise on your blood pressure. There is not much good evidence that exercise helps your blood pressure.</p>
 				<p>This ignores all the other benefits of exercise on your physical and mental health.  Exercise helps with your coordination and strength. It can also be sociable and fun if you choose the right activity.</p>
 				<p>The current best advice about exercise and blood pressure is that if you exercise for 50 to 60 minutes,  3 or 4 times a week, it probably helps to lower your blood pressure.</p>
-				
-			<h4>Would relaxation therapy or meditation help me?</h4>
-				<p>You may like to try relaxation therapy or meditation to lower your blood pressure. Many people find these beneficial. They are not routinely available on the NHS so you will have to find a private supplier. You will find them on our links page.</p>
 				
 			<h4>What about smoking?</h4>
 				<p>You may be amazed to find that there is no direct link between smoking and high blood pressure. However smoking does make you more at risk of heart attacks and strokes.</p>
@@ -59,6 +58,10 @@
 				
 			<h3>Complementary Medicine</h3>
 				<p>You may wish to try supplements to control your blood pressure. Unfortunately calcium and magnesium supplements have not been shown to have a clinically significant effect on your blood pressure. And contrary to popular belief, potassium supplements have no effect on your blood pressure at all.</p>
+			
+			<%= image_tag("relaxation_small.jpg", :class => "picture_left") %>
+			<h4>Would relaxation therapy or meditation help me?</h4>
+				<p>You may like to try relaxation therapy or meditation to lower your blood pressure. Many people find these beneficial. They are not routinely available on the NHS so you will have to find a private supplier. You will find them on our links page.</p>
 			
 			<h4>How about acupuncture?</h4>
 				<p>Although you may wish to try acupuncture to see if it helps with your blood pressure, at the moment we do not know whether it is helpful.</p>
@@ -75,6 +78,7 @@
 				<p>You may find that one brand of medication works better  than another, even though you’ve been told that they have the same generic ingredient. This is because of the placebo effect.</p>
 			
 			<h4>Why do I need more than one medication?</h4>
+			<%= image_tag("multiple_pills_small.jpg", :class => "picture_left") %>
 				<p>If you do need medication, then you will probably end up using more than one drug in combination. Most people need to do this because drugs for high blood pressure often have a 'synergistic' effect when used in combination. Synergy is when the good effects of two or more drugs used at the same time is greater than the effects of those drugs when they are used individually.</p>
 				<p>Because of this you will hear drugs referred to as first line and second line choices. These first and second line choices vary according to your age. They also vary according to your ethnicity. This is because some studies have shown that some medications do not work as well in people with an African or Caribbean background.</p>
 			
@@ -85,12 +89,12 @@
 				<p>Drugs are put in groups according to the way that they work on your body. Usually, you shouldn’t take more than one drug from each group. To simplify things for you, we have listed all the common drugs below, ordered into their groups, with both their generic names and their brand names shown.</p>
 			
 			<% @groups.each do |group| %>
-			<h5>Group: <%= group %></h5>
+			<h5><%= group %></h5>
 				
 				<table>
 					<tr>
 						<th>Generic drug name</th>
-						<th>Brand names</th>
+						<th>Brand name(s)</th>
 					</tr>
 					<% @medications[group].each do |generic, brands| %>
 					<tr class=" <%= cycle('line1' , 'line2' ) %>" >
@@ -99,7 +103,7 @@
 					</tr>
 					<% end %>
 				</table>
-				<p class="extra_indent"><%= @medication_explanation[group]%></p>
+				<p class="extra_indent more_space"><%= @medication_explanation[group]%></p>
 			<% end %>
 				
 		</div>
